# django-unfold-fobi

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  PACKAGE_SUMMARY.md  README.md  pyproject.toml
.agents/: CLAUDE.md
.agents/plans/: FOBI_API_USAGE.md  IMMUTABLE_BASE_PLAN.md  UNFOLD_FOBI_PLAN.md
.agents/reviews/: development-integrated__T11-analysis.md  development-integrated__T11.md  development-integrated__T12-analysis.md  development-integrated__T14-analysis.md  development-integrated__T15-analysis.md  feat-t02-package-scaffold__T02.md  feat-t03-pytest-cases__T03.md  feat-t04-playwright-ui__T04.md  feat-t05-add-view-i18n__T05.md  feat-t05-add-view-i18n__T05a.md  feat-t05-add-view-i18n__T05b.md  feat-t06-edit-view-structure__T06.md  feat-t07-entries-admin-readonly__T07.md  feat-t10-native-unfold-poc__T10.md  feat-t10-native-unfold-poc__T10a-analysis.md  feat-t10-native-unfold-poc__T10a.md  feat-t10-native-unfold-poc__analysis.md  feat-t10a-native-change-elements-handlers__T10b-analysis.md  feat-t10a-native-change-elements-handlers__T10b.md  feat-t10b-native-inline-tabs-sorting__T10c-analysis.md  feat-t10b-native-inline-tabs-sorting__T10c.md  feat-t10c-sortable-elements-inline__T10d-analysis.md  feat-t10c-sortable-elements-inline__T10d.md  feat-t10d-sort-handle-contract__T10e-analysis.md  feat-t10d-sort-handle-contract__T10e.md  feat-t10e-popup-modal-compat__T10f-analysis.md  feat-t10e-popup-modal-compat__T10f.md  feat-t10f-unfold-modal-trigger-contract__T10g-analysis.md  feat-t10f-unfold-modal-trigger-contract__T10g.md  feat-t12-code-org-test-reduction__T13-analysis.md  feat-t16-optional-sites-integration__T16-analysis.md  feat-t16-optional-sites-integration__T16a-analysis.md  feat-unfold-admin-integration__T01.md
.agents/tasks/: T01_test_infrastructure.md  T02_package_scaffold.md  T03_pytest_cases.md  T04_playwright_ui.md  T05_add_view_i18n.md  T05a_german_localization_test_project.md  T05b_unfold_multilanguage_switcher.md  T06_edit_view_structure_tabs.md  T07_entries_admin_readonly.md  T08_edit_view_actions_grid.md  T09_django_permission_alignment.md  T10_native_unfold_admin_poc.md  T10a_native_change_elements_handlers.md  T10b_native_unfold_inline_tabs_sorting.md  T10c_formentry_elements_sortable_inline.md  T10d_sort_handle_contract_check.md  T10e_popup_modal_compat_for_element_edit.md  T10f_unfold_modal_trigger_contract.md  T10g_modal_iframe_content_refused.md  T11_src_and_test_suite_rationalization.md  T12_test_suite_complexity_reduction.md  T13_unfold_actions_tabs_and_handler_modal_fixes.md  T14_apps_and_fobi_admin_refactor.md  T15_unfold_modal_popup_submit_row.md  T16_optional_sites_integration.md  T16a_sites_integration_wiring_and_validation.md  T17_api_widget_type_in_form_fields.md  T17a_api_widget_fallbacks.md  T18_api_active_dates_and_success_metadata.md  T19_api_csrf_token_in_form_fields.md  T20_saved_entries_admin_pretty_readonly_integration.md  T21_safe_form_delete_unlink_saved_entries.md  T22_prevent_duplicate_form_names.md  T23_api_form_fields_preview_hook.md  T23a_preview_site_scope_filtering.md  T24_djangocms_plugin_site_aware_form_reference.md  T25_altcha_backend_drf_field.md  T26_add_view_save_first_notice_for_form_elements.md  T27_fix_db_store_export_inline_button.md  (+1 more)
plans/: FOBI_API_USAGE.md  IMMUTABLE_BASE_PLAN.md
reviews/: development-integrated__T11-analysis.md  development-integrated__T11.md  development-integrated__T12-analysis.md  development-integrated__T14-analysis.md  development-integrated__T15-analysis.md  feat-t02-package-scaffold__T02.md  feat-t03-pytest-cases__T03.md  feat-t04-playwright-ui__T04.md  feat-t05-add-view-i18n__T05.md  feat-t05-add-view-i18n__T05a.md  feat-t05-add-view-i18n__T05b.md  feat-t06-edit-view-structure__T06.md  feat-t07-entries-admin-readonly__T07.md  feat-t10-native-unfold-poc__T10.md  feat-t10-native-unfold-poc__T10a-analysis.md  feat-t10-native-unfold-poc__T10a.md  feat-t10-native-unfold-poc__analysis.md  feat-t10a-native-change-elements-handlers__T10b-analysis.md  feat-t10a-native-change-elements-handlers__T10b.md  feat-t10b-native-inline-tabs-sorting__T10c-analysis.md  feat-t10b-native-inline-tabs-sorting__T10c.md  feat-t10c-sortable-elements-inline__T10d-analysis.md  feat-t10c-sortable-elements-inline__T10d.md  feat-t10d-sort-handle-contract__T10e-analysis.md  feat-t10d-sort-handle-contract__T10e.md  feat-t10e-popup-modal-compat__T10f-analysis.md  feat-t10e-popup-modal-compat__T10f.md  feat-t10f-unfold-modal-trigger-contract__T10g-analysis.md  feat-t10f-unfold-modal-trigger-contract__T10g.md  feat-t12-code-org-test-reduction__T13-analysis.md  feat-t16-optional-sites-integration__T16-analysis.md  feat-t16-optional-sites-integration__T16a-analysis.md  feat-t21-safe-form-delete__T21-analysis.md  feat-unfold-admin-integration__T01.md
tasks/: T01_test_infrastructure.md  T02_package_scaffold.md  T03_pytest_cases.md  T04_playwright_ui.md  T05_add_view_i18n.md  T05a_german_localization_test_project.md  T05b_unfold_multilanguage_switcher.md  T06_edit_view_structure_tabs.md  T07_edit_view_actions_grid.md  T07_entries_admin_readonly.md  T08_django_permission_alignment.md  T08_edit_view_actions_grid.md  T09_django_permission_alignment.md  T10_native_unfold_admin_poc.md  T10a_native_change_elements_handlers.md  T10b_native_unfold_inline_tabs_sorting.md  T10c_formentry_elements_sortable_inline.md  T10d_sort_handle_contract_check.md  T10e_popup_modal_compat_for_element_edit.md  T10f_unfold_modal_trigger_contract.md  T10g_modal_iframe_content_refused.md  T11_src_and_test_suite_rationalization.md  T12_test_suite_complexity_reduction.md  T13_unfold_actions_tabs_and_handler_modal_fixes.md  T14_apps_and_fobi_admin_refactor.md  T15_unfold_modal_popup_submit_row.md  T16_optional_sites_integration.md  T16a_sites_integration_wiring_and_validation.md
tests/: conftest.py  helpers.py  test_add_view.py  test_db_store_view.py  test_edit_view.py  test_i18n.py  test_language_routing.py  test_smoke.py  test_t03_view_contracts.py  test_t07_entries_admin.py  test_t13_actions_tabs_handlers.py  test_t16_sites_integration.py
(+144 files in other folders)
